<resources>
    <string name="app_name">Simple MBTA App</string>
    <string name="database_name">simpleMbtaDatabase</string>

    <!-- Activity Titles -->
    <string name="main_activity_title">Simple MBTA</string>
    <string name="route_detail_activity_title">Route Detail</string>
    <string name="trip_detail_to_title">to</string>

    <!-- Tab Titles -->
    <string name="map_search_title">Map</string>
    <string name="route_search_title">Routes</string>

    <!-- Spinner Titles -->
    <string name="route">Route</string>
    <string name="direction">Direction</string>
    <string name="from">Stop</string>
    <string name="map">Map</string>

    <!-- Service Alerts -->
    <string name="service_advisory">Service Advisory</string>
    <string name="service_advisories">Service Advisories</string>
    <string name="service_alert">Service Alert</string>
    <string name="service_alerts">Service Alerts</string>
    <string name="alert">Alert</string>
    <string name="alerts">Alerts</string>
    <string name="advisory">Advisory</string>
    <string name="advisories">Advisories</string>
    <string name="no_service_alerts">No Service Alerts</string>

    <!-- Accessibility -->
    <string name="wheelchair_accessible">Wheelchair Accessible</string>
    <string name="no_wheelchair_accessibility">No Wheelchair Accessibility</string>
    <string name="no_accessibility_info">No Accessibility Info Available</string>

    <!-- Error Messages -->
    <string name="location_permission_denied_text">Tap here to allow Simple MBTA to access your location</string>
    <string name="location_error_text">Unable to get your current location</string>
    <string name="network_error_text">Unable to connect to the internet</string>
    <string name="error_network">Unable to connect to the internet</string>
    <string name="error_location">Unable to get your current location</string>
    <string name="error_stops">Unable to get stops</string>
    <string name="error_routes">Unable to get routes</string>
    <string name="error_nearby_stops">Unable to get nearby MBTA stops</string>
    <string name="error_nearby_routes">Unable to get nearby MBTA services</string>
    <string name="error_upcoming_predictions">Unable to get upcoming departures</string>

    <!-- No Predictions Messages -->
    <string name="no_nearby_services">No MBTA services near this location</string>
    <string name="no_predictions">No predictions</string>
    <string name="no_nearby_predictions">No predictions near this location</string>
    <string name="no_predictions_this_stop">No predictions at this stop</string>
    <string name="no_predictions_this_stop_p1">No</string>
    <string name="no_predictions_this_stop_p2">predictions at this stop</string>
    <string name="no_further_predictions">No more predictions</string>
    <string name="select_stop">Select a stop to see predictions</string>
    <string name="no_stops">No stops in this direction</string>
    <string name="no_departures">No upcoming departures</string>

    <!-- Prediction Header Texts -->
    <string name="nearby">Nearby</string>
    <string name="other_nearby_services">Other Nearby Services</string>
    <string name="near_this_stop">Near This Stop</string>

    <!-- Map Search Prediction Statuses -->
    <string name="map_departing">Departing</string>
    <string name="map_arriving">Arriving</string>
    <string name="map_approaching">Approaching</string>
    <string name="map_departed">Departed</string>
    <string name="map_arrived">Arrived</string>

    <!-- Map Info Window Strings -->
    <string name="map_train">Train</string>
    <string name="map_vehicle">Vehicle</string>
    <string name="map_currently_on">Currently on</string>
    <string name="map_route">Route</string>
    <string name="map_to">to</string>
    <string name="map_cancelled">Cancelled</string>
    <string name="map_skipped">Skipped</string>
    <string name="map_departs">Departs</string>
    <string name="map_arrives">Arrives</string>
    <string name="map_in">in</string>
    <string name="map_at">at</string>
    <string name="map_min">min</string>
    <string name="map_already_departed_at">Already departed at</string>
    <string name="map_already_arrived_at">Already arrived at</string>

    <!-- Route Search Prediction Statuses -->
    <string name="route_departing">Departing</string>
    <string name="route_arriving">Arriving</string>
    <string name="route_approaching">Approaching</string>
    <string name="route_departed">Departed</string>
    <string name="route_arrived">Arrived</string>

    <!-- Trip Prediction Statuses -->
    <string name="trip_departing">Departing</string>
    <string name="trip_arriving">Arriving</string>
    <string name="trip_approaching">Approaching</string>
    <string name="trip_already_departed">Already departed</string>
    <string name="trip_already_arrived">Already arrived</string>

    <!-- Trip Vehicle Statuses -->
    <string name="trip_not_yet_started">This trip has not yet started</string>
    <string name="trip_no_vehicle_assigned">No vehicle is currently assigned to this trip</string>
    <string name="trip_live_tracking_not_available">Live tracking is not available for this trip</string>
    <string name="trip_boarding">Boarding</string>
    <string name="trip_en_route">En route to</string>
    <string name="trip_stop_away">stop away</string>
    <string name="trip_stops_away">stops away</string>

    <!-- Passenger Load Statuses -->
    <string name="load_not_crowded">NOT CROWDED</string>
    <string name="load_some_crowding">SOME CROWDING</string>
    <string name="load_very_crowded">VERY CROWDED</string>

    <!-- Route Names -->
    <string name="red_line_long_name">Red Line</string>
    <string name="orange_line_long_name">Orange Line</string>
    <string name="blue_line_long_name">Blue Line</string>
    <string name="green_line_long_name">Green Line</string>
    <string name="silver_line_long_name">Silver Line</string>

    <!-- Route Abbreviations -->
    <string name="red_line_short_name">RL</string>
    <string name="red_line_mattapan_short_name">RL&#8226;M</string>
    <string name="orange_line_short_name">OL</string>
    <string name="blue_line_short_name">BL</string>
    <string name="green_line_b_short_name">GL&#8226;B</string>
    <string name="green_line_c_short_name">GL&#8226;C</string>
    <string name="green_line_d_short_name">GL&#8226;D</string>
    <string name="green_line_e_short_name">GL&#8226;E</string>
    <string name="silver_line_waterfront_short_name">SL</string>
    <string name="commuter_rail_short_name">CR</string>
    <string name="cape_flyer_short_name">CapeFlyer</string>
    <string name="ferry_short_name">Ferry</string>

    <!-- Service Alert Headers -->
    <string name="UPCOMING">Upcoming</string>
    <string name="ACCESS_ISSUE">Access Issue</string>
    <string name="ADDITIONAL_SERVICE">Additional Service</string>
    <string name="AMBER_ALERT">Amber Alert</string>
    <string name="BIKE_ISSUE">Bike Issue</string>
    <string name="CANCELLATION">Cancellation</string>
    <string name="DELAY">Delay</string>
    <string name="DETOUR">Detour</string>
    <string name="DOCK_CLOSURE">Dock Closure</string>
    <string name="DOCK_ISSUE">Dock Issue</string>
    <string name="ELEVATOR_CLOSURE">Elevator Closure</string>
    <string name="ESCALATOR_CLOSURE">Escalator Closure</string>
    <string name="EXTRA_SERVICE">Extra Service</string>
    <string name="FACILITY_ISSUE">Facility Issue</string>
    <string name="MODIFIED_SERVICE">Modified Service</string>
    <string name="NO_SERVICE">No Service</string>
    <string name="OTHER_EFFECT">Other Effect</string>
    <string name="PARKING_CLOSURE">Parking Closure</string>
    <string name="PARKING_ISSUE">Parking Issue</string>
    <string name="POLICY_CHANGE">Policy Change</string>
    <string name="SCHEDULE_CHANGE">Schedule Change</string>
    <string name="SERVICE_CHANGE">Service Change</string>
    <string name="SHUTTLE">Bus Shuttle</string>
    <string name="SNOW_ROUTE">Snow Route</string>
    <string name="STATION_CLOSURE">Station Closure</string>
    <string name="STATION_ISSUE">Station Issue</string>
    <string name="STOP_CLOSURE">Stop Closure</string>
    <string name="STOP_MOVE">Stop Move</string>
    <string name="STOP_MOVED">Stop Moved</string>
    <string name="SUMMARY">Summary</string>
    <string name="SUSPENSION">Suspension</string>
    <string name="TRACK_CHANGE">Track Change</string>
    <string name="UNKNOWN_EFFECT">Unknown Effect</string>

    <!-- Dialog Box Strings -->
    <string name="dialog_close_button">Close</string>
    <string name="dialog_go_to_route_button">Go To Route</string>
    <string name="route_prefix">Route</string>

    <!-- SharedPreferences Keys -->
    <string name="saved_map_search_latlon">savedMapSearchLatLon</string>
    <string name="saved_route_search_route">savedRouteSearchRoute</string>

    <!-- Miscellaneous -->
    <string name="vehicle">Vehicle</string>
    <string name="train">Train</string>
    <string name="track">TRACK</string>
    <string name="min">min</string>
    <string name="live">LIVE</string>
    <string name="en_route">EN ROUTE</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="drop_off">DROP-OFF ONLY</string>
    <string name="cancelled">CANCELLED</string>
    <string name="skipped">SKIPPED</string>
    <string name="title_activity_maps">Map</string>
    <string name="arriving">Arriving</string>
    <string name="departing">Departing</string>
    <string name="view_all">View All</string>
    <string name="time_zone_warning">Arrival and departure times are in Boston local time</string>
</resources>
