<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_view_background">

    <RelativeLayout
        android:id="@+id/predictions_card_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/left_side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/enroute_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_enroute_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_header_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/destination_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_header_text_size"
                    tools:text="Malden Center" />

                <TextView
                    android:id="@+id/vehicle_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="@dimen/body_text_size"
                    android:visibility="gone"
                    tools:text="Train 402" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical">

                <jackwtat.simplembta.views.PredictionTimeView
                    android:id="@+id/prediction_time_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/spacer_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="@dimen/body_text_size" />

                <TextView
                    android:id="@+id/track_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_in_progress"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/track_number"
                    android:textSize="@dimen/body_text_size"
                    android:textStyle="bold"
                    tools:text="TRACK 4" />

                <TextView
                    android:id="@+id/en_route_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_in_progress"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/en_route"
                    android:textColor="@color/track_number"
                    android:textSize="@dimen/body_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/not_crowded_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_not_crowded"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/load_not_crowded"
                    android:textColor="@color/not_crowded"
                    android:textSize="@dimen/body_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/some_crowding_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_some_crowding"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/load_some_crowding"
                    android:textColor="@color/some_crowding"
                    android:textSize="@dimen/body_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/very_crowded_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_very_crowded"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/load_very_crowded"
                    android:textColor="@color/very_crowded"
                    android:textSize="@dimen/body_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tomorrow_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_tomorrow"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/tomorrow"
                    android:textColor="@color/tomorrow_prediction"
                    android:textSize="@dimen/body_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/week_day_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_tomorrow"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/tomorrow_prediction"
                    android:textSize="@dimen/body_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cancelled_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_cancelled"
                    android:gravity="center_horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/cancelled"
                    android:textColor="@color/HighlightedText"
                    android:textSize="@dimen/body_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/drop_off_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_dropoff"
                    android:gravity="center_horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/drop_off"
                    android:textColor="@color/HighlightedText"
                    android:textSize="@dimen/body_text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/bottom_edge"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/predictions_card_body"
        android:background="#CCCCCC" />

    <View
        android:id="@+id/bottom_border"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@id/bottom_edge"
        android:background="@color/list_view_background"
        android:visibility="visible" />
</RelativeLayout>