<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/accessibility_indicators_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/accessible_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_accessible"
                android:paddingLeft="6dp"
                android:paddingTop="5dp"
                android:paddingRight="6dp"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_accessible_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/wheelchair_accessible"
                android:textColor="@color/accessible"
                android:textSize="@dimen/small_header_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_accessibility_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stop_alert" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/no_wheelchair_accessibility"
                android:textColor="@color/no_stop_data"
                android:textSize="@dimen/small_header_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_accessibility_data_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stop_no_data" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/no_accessibility_info"
                android:textColor="@color/no_stop_data"
                android:textSize="@dimen/small_header_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/middle_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/accessibility_indicators_layout"
        android:background="#CCCCCC" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/alerts_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/middle_border"
        android:fadeScrollbars="false"
        android:scrollIndicators="bottom"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical" />
</RelativeLayout>